@@ -7,6 +7,6 @@ cgrates.org,EVENT2,*any,*string:~*req.EventName:RoundRobin,,*round_robin,,ALL2,,
 cgrates.org,EVENT2,,,,,,ALL,,10,,,
 cgrates.org,EVENT3,*any,*string:~*req.EventName:Random,,*random,,ALL2,,20,false,,20
 cgrates.org,EVENT3,,,,,,ALL,,10,,,
-cgrates.org,EVENT4,*any,*string:~*req.EventName:Broadcast,,*broadcast,,ALL2,,20,false,,20
+cgrates.org,EVENT4,*any,*string:~*req.EventName:Broadcast,,*broadcast_sync,,ALL2,,20,false,,20
 cgrates.org,EVENT4,,,,,,ALL,,10,,,
 cgrates.org,EVENT5,*any,*string:~*req.EventName:Internal,,*weight,,SELF,,20,false,,20
